test/expected/cast_a.out
cast x into auto
            ^
13: error: can not cast into "auto"
